20200629_Insert chart Issue : 차트가 레이아웃에 나오지 않음....

--- a/app/src/main/res/layout/fragment_calendar.xml
+++ b/app/src/main/res/layout/fragment_calendar.xml
@@ -57,7 +57,7 @@
                         android:layout_height="20dp"
                         android:layout_gravity="center_vertical"
                         android:layout_marginLeft="5dp"
-                        android:src="@drawable/guide_button"/>
+                        android:src="@drawable/ic_guide_button"/>
                 </LinearLayout>
             </LinearLayout>
             <!--달력-->
