--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity">
-
+<!--내용 보여지는 레이아웃-->
     <FrameLayout
         android:id="@+id/content_layout"
         android:layout_width="match_parent"
@@ -13,7 +13,7 @@
         android:layout_centerVertical="true"
         android:layout_centerHorizontal="true"
         android:layout_above="@+id/nav_view"/>
-
+<!--하단 메뉴바 레이아웃-->
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/nav_view"
         android:layout_width="match_parent"
